--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Frank Beirne 2016 </span>
+						<span class="copyright">&copy; Frank Beirne <script>document.write(new Date().getFullYear())</script> </span>
 					</footer>
 
 			</div>
