--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<ul>
 								<li><a href="https://ca.linkedin.com/in/frankbeirne" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/frankbeirne" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="mailto:me@frankbeirne.com?Subject=Hi%20Frank!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="mailto:info@frankbeirne.com?Subject=Hi%20Frank!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
